SERVER-77532 Clear drop pending reaper state before re-opening the catalog after rollback to stable

(cherry picked from commit b76ba4c151dcec6daf4cfd2c29fadceff355a36a)