src/mongo/db/storage/storage_engine_impl.cpp
@@ -1165,8 +1165,8 @@ bool StorageEngineImpl::supportsPendingDrops() const {
     return supportsReadConcernMajority();
 }
 
-void StorageEngineImpl::clearDropPendingState() {
-    _dropPendingIdentReaper.clearDropPendingState();
+void StorageEngineImpl::clearDropPendingState(OperationContext* opCtx) {
+    _dropPendingIdentReaper.clearDropPendingState(opCtx);
 }
 
 Timestamp StorageEngineImpl::getAllDurableTimestamp() const {
